# orji

./: .gitignore  PROJECT_NAME  README.md  key.sh  pyproject.toml  requirements.txt  setup.py  todo.org
.github/workflows/: regression.yml
docs/public/: changelog.md  index.md  redirects.yml
docs/src/: dirtemplate.yml  index.md
examples/: badat.jinja2  error.jinja2  fail.jinja2  latex.jinja2  latex.org  letter.jinja2  letter.org  notes.jinja2  output.txt  simple.jinja2  simple.org
examples/output/: letter.tex
hitch/: Dockerfile-hitch  debugrequirements.txt  docgen.py  docstory.yml  engine.py  hitchreqs.in  hitchreqs.txt  key.py  pyproject.toml
hitch/story/: all-template-features.story  basic-calc.story  calc-dependency.story  calc-errors.story  calc-list-of-notes.story  calculation.story  date-calc.story  errors.story  fail.story  in.story  insert-ical.story  insert-multiple-things.story  insert-snippet.story  insert-vcf.story  latex-cv.story  latex-letter.story  links.story  lookup-in-file.story  lookup.story  markdown.story  module.story  multiple-files.story  quick.story  quickstart.story  rm.story  run.story  script-multiple-matching.story  script.story  simple.story  subcalcs.story  todo.txt  walk.story
orji/: __init__.py  app.py  calculation.py  cat.py  exceptions.py  ical.py  insert.py  loader.py  lookup.py  note.py  output.py  remove.py  run.py  tempdir.py  template.py  utils.py  vcf.py
publish/: config.json  publish_local.sh  publish_remote.sh  setup.py  upload.py  version_utils.py
src/orji/: __init__.py  app.py  note.py
(+13 files in other folders)
